split components. getting ready to go to some kind of binding

--- a/client/main.css
+++ b/client/main.css
@@ -1,10 +1,7 @@
 
-body {
-    padding: 10px;
-}
 
-.table-striped {
-
+.main-content-padding {
+  padding: 1.1em;
 }
 
 .table-striped-row:nth-child(even) {
